# spargel

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gn  BUILD.gn  CMakeLists.txt  Dockerfile  README.md  docker-build.sh  format-all.sh  thrid_test.cmake  x.py
.zed/: debug.json
cmake/: AddSpargel.cmake  SpargelDependencies.cmake  SpargelOptions.cmake  SpargelStaticAnalysis.cmake
compiler/: diagnostic.js  driver.js  driver.py  justfile  lexer.js  package.json  source.js  (+5 more)
gn/: autoconfig.gni  metal_library.gni
gn/config/: BUILD.gn  BUILDCONFIG.gn  clang.gni  coverage.gni  llvm.gni  msvc.gni  sysroot.gni  win_sdk.gni
gn/script/: compile_metal.py  compiled_action.py  write_autoconfig.py
gn/toolchain/: BUILD.gn
source/refl/: BUILD.gn  demo.cpp  main.cpp
source/spargel/: BUILD.gn  CMakeLists.txt  autoconfig.h.in  config.h
source/spargel/base/: BUILD.gn  CMakeLists.txt  README.md  algorithm.h  allocator.cpp  allocator.h  allocator2.h  allocator_tests.cpp  array_storage.h  array_storage_test.cpp  assert.h  attribute.h  backtrace.h  backtrace_demo.cpp  bit_cast.h  block_pool.h  check.h  checked_convert.h  checked_convert_tests.cpp  command_line.h  concept.h  console.cpp  console.h  const.h  coroutine.h  coroutine_demo.cpp  deflate.cpp  deflate.h  deflate_demo.cpp  either.h  either_test.cpp  enum.h  executable_path_demo.cpp  expected.h  format.cpp  format.h  format_tests.cpp  functional.h  functional_test.cpp  hash.h  (+60 more)
source/spargel/cocoa_utils/: retain_ptr.h
source/spargel/codec/: BUILD.gn  CMakeLists.txt  codec.cpp  codec.h  codec2.h  codec3.h  codec4.h  cursor.cpp  cursor.h  dump_json.cpp  dump_json2.cpp  json.cpp  json.h  json2.cpp  json_codec.cpp  json_codec.h  json_parser.cpp  json_utils.cpp  ppm.cpp  ppm_info.cpp  test_codec.cpp  test_codec2.cpp  test_codec3.cpp  test_codec4.cpp  test_json.cpp  test_json.h  test_json_codec.cpp  test_json_codec2.cpp  test_json_codec3.cpp  test_json_codec4.cpp  try_codec.cpp
source/spargel/codec/image/: legacy.cpp  legacy.h  ppm.cpp  ppm_info.cpp
source/spargel/codec/model/: BUILD.gn  CMakeLists.txt  bloat.cpp  dump_gltf.cpp  gltf.cpp  gltf.h  gltf2.cpp  gltf4.cpp  summary_gltf.cpp
source/spargel/ecs/: CMakeLists.txt  ecs.cpp  ecs.h  ecs_demo.cpp
source/spargel/editor/: BUILD.gn  CMakeLists.txt  main.cpp
source/spargel/entry/: CMakeLists.txt  component.h  component_demo.cpp  launch_data.h  launcher_mac.cpp  simple.cpp  simple.h  simple_android.cpp  simple_demo.cpp
source/spargel/gpu/: BUILD.gn  CMakeLists.txt  demo_gpu.cpp  gpu.cpp  gpu.h  gpu2.h  gpu2_metal.h  gpu3.cpp  gpu3.h  gpu3_metal.h  gpu3_metal.mm  gpu_context.cpp  gpu_context.h  gpu_metal.h  gpu_metal.mm  gpu_vulkan.cpp  gpu_vulkan.h  metal_context.h  metal_context.mm  metal_shader_manager.cpp  metal_shader_manager.h  tlsf_allocator.h  tlsf_allocator_tests.cpp  vulkan_procs.inc
source/spargel/gpu/demo/: BUILD.gn  CMakeLists.txt  demo_directx.cpp  demo_gpu.cpp  demo_gpu3.cpp  demo_gpu_mac.mm  demo_gpu_port.cpp  demo_graph.cpp  demo_sort.cpp  demo_sort.glsl  demo_sum.cpp  demo_sum.glsl  demo_tiles.cpp  shader.metal  shaders.hlsl
source/spargel/input/: CMakeLists.txt  button_input.h  input_device.h  input_manager.cpp  input_manager.h  keyboard_code.inc  keyboard_device.h
source/spargel/json/: BUILD.gn  CMakeLists.txt  cursor.cpp  cursor.h  dump_json.cpp  json.h  json_parser.cpp  json_parser.h  json_tests.cpp  json_value.cpp  json_value.h
source/spargel/lang/: BUILD.gn  CMakeLists.txt  README.md  backend.h  concrete.h  core.h  diagnostic.h  driver.cpp  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  syntax.cpp  syntax.h  syntax_kind.cpp  syntax_kind.h  syntax_kind.inc  syntax_node.cpp  syntax_node.h  syntax_test.cpp  syntax_token.cpp  syntax_token.h  token_kind.cpp  token_kind.h  token_kind.inc  wasm.h
source/spargel/math/: function.h  matrix.h  point.h  rectangle.h  vector.h
source/spargel/render/: BUILD.gn  CMakeLists.txt  README.md  atlas_packer.cpp  atlas_packer.h  constants.h  demo_glad.c  demo_gltf_opengl.cpp  demo_gltf_opengl.vs  demo_metal.mm  demo_opengl.cpp  demo_ui_renderer.cpp  gen.py  headless_metal.mm  mesh.h  ui_renderer.cpp  ui_renderer.h  ui_renderer_metal.h  ui_renderer_metal.mm  ui_scene.cpp  ui_scene.h  ui_shaders.metal
source/spargel/render/demo_assets/: bunny.smesh  cube.smesh  triangle.smesh
source/spargel/render/shader/: shader.metal
source/spargel/resource/: BUILD.gn  CMakeLists.txt  android_asset.cpp  android_asset.h  demo_resource.cpp  demo_resource_overlay.cpp  directory.cpp  directory.h  overlay.cpp  overlay.h  resource.cpp  resource.h  resource_demo.cpp
source/spargel/task/: BUILD.gn  README.md  demo_task.cpp  task_manager.cpp  task_manager.h  task_manager_macos.cpp  task_manager_macos.h
source/spargel/text/: BUILD.gn  CMakeLists.txt  README.md  demo_font.cpp  demo_font_console.cpp  demo_font_text.cpp  demo_ft_hb_console.cpp  font.cpp  font.h  font_descriptor.h  font_freetype.cpp  font_freetype.h  font_linux.cpp  font_linux.h  font_mac.cpp  font_mac.h  font_manager.cpp  font_manager.h  font_manager_linux.cpp  font_manager_linux.h  font_manager_mac.cpp  font_manager_mac.h  font_manager_win.cpp  font_manager_win.h  proto_mac.cpp  sample_texts.txt  styled_text.h  text_renderer.h  text_shaper.h  text_shaper_harfbuzz.cpp  text_shaper_harfbuzz.h  text_shaper_linux.cpp  text_shaper_linux.h  text_shaper_mac.cpp  text_shaper_mac.h  text_shaper_win.cpp
source/spargel/ui/: BUILD.gn  CMakeLists.txt  README.md  demo_ui.cpp  event.cpp  event.h  physical_key_mapping_mac.inc  platform.cpp  platform.h  platform_mac.h  platform_mac.mm  platform_win32.cpp  platform_win32.h  renderer.h  renderer_metal.h  text_linux.cpp  text_linux.h  text_system.h  ui.cpp  ui.h  ui_android.cpp  ui_android.h  ui_dummy.cpp  ui_dummy.h  ui_mac.h  ui_mac.mm  ui_win32.cpp  ui_win32.h  ui_xcb.cpp  ui_xcb.h  view.cpp  view.h  view_host.cpp  view_host.h  window.h  window_demo.cpp  window_demo2.cpp  window_mac.h  window_mac.mm  window_win32.cpp  (+3 more)
source/spargel/util/: BUILD.gn  CMakeLists.txt  path.cpp  path.h  path_test.cpp  test_path.cpp
(+48 files in other folders)
