import("//gn/config/sysroot.gni")
import("//gn/config/coverage.gni")

config("basics") {
    cflags = []
    cflags_cc = []
    cflags_objcc = []
    ldflags = []
    include_dirs = []

    cflags += [ "-fcolor-diagnostics" ]
    #ldflags += [
    #    "-fuse-ld=lld",
    #    "-Wl,--color-diagnostics",
    #]

    include_dirs = [
        "//source",
        "$root_gen_dir/source",
    ]

    cflags += [ "-O0" ]

    cflags += [ "-std=c11" ]
    cflags_cc += [ "-std=c++20" ]
    cflags_objcc += [ "-std=c++20" ]

    cflags_cc += [ "-fno-exceptions" ]
    cflags_cc += [ "-fno-rtti" ]

    if (is_macos) {
        sysroot_flags = [
            "-isysroot",
            rebase_path(sysroot, root_build_dir),
        ]
        cflags += sysroot_flags
        ldflags += sysroot_flags
    }
}

config("warnings") {
    cflags = [
        "-pedantic-errors",
        "-Wall",
        "-Wextra",
        "-Wconversion",
        "-Werror",
    ]
}

config("default_optimize") {
    cflags = []
    if (!is_debug) {
        cflags += [
            "-O2",
        ]
    }
}

config("default_coverage") {
    cflags = []
    ldflags = []

    if (enable_clang_coverage) {
        cflags += [
            "-fprofile-instr-generate",
            "-fcoverage-mapping",
        ]
        ldflags += [
            "-fprofile-instr-generate",
        ]
    }
}
