import("//gn/config/llvm.gni")

shared_library("refl") {
    sources = [
        "main.cpp",
    ]
    if (llvm_root != "") {
        include_dirs = [ "$llvm_root/include" ]
        lib_dirs = [ "$llvm_root/lib" ]
    }
    libs = [
        "LLVM",
        "clang-cpp",
    ]
    configs -= [
        "//gn/config:warnings",
    ]
}

# Clang crashes.
#
#config("plugin_config") {
#    cflags = [
#        "-fplugin=./refl.dylib"
#    ]
#}
#
#executable("demo_plugin") {
#    sources = [ "demo.cpp" ]
#    configs += [ ":plugin_config" ]
#}
