source_set("codec") {
    public = [
        "codec.h",
        "json_codec.h",
    ]
    sources = [
        "codec.cpp",
        "json_codec.cpp",
    ]
    deps = [
        "//source/spargel/base",
        "//source/spargel/json",
    ]
}

executable("codec_tests") {
    sources = [
        "test_codec.cpp",
        "test_json_codec.cpp",
    ]
    deps = [
        ":codec",
        "//source/spargel/base",
        "//source/spargel/base:test_main",
        "//source/spargel/json",
    ]
}
