source_set("gpu") {
    sources = [
        "gpu_context.cpp",
        "gpu.cpp",
    ]
    public = [
        "gpu_context.h",
        "gpu.h",
        "tlsf_allocator.h"
    ]
    deps = [
        "//source/spargel/base",
        "//source/spargel/codec",
    ]

    if (is_macos) {
        sources += [
            "gpu_metal.mm",
            "metal_context.mm",
        ]
        frameworks = [
            "Foundation.framework",
            "Metal.framework",
        ]
    }
}

executable("demo_gpu") {
    sources = [ "demo_gpu.cpp" ]
    deps = [
        ":gpu",
        "//source/spargel/codec",
        "//source/spargel/json",
    ]
}

executable("gpu_tests") {
    sources = [ "tlsf_allocator_tests.cpp" ]
    deps = [
        ":gpu",
        "//source/spargel/base",
        "//source/spargel/base:test_main",
    ]
}
