import("//gn/metal_library.gni")

source_set("render") {
    sources = [
        "atlas_packer.cpp",
        "ui_renderer.cpp",
        "ui_scene.cpp",
    ]
    public = [
        "ui_renderer.h",
        "ui_scene.h",
    ]
    deps = [
        "//source/spargel/base",
        "//source/spargel/gpu",
        "//source/spargel/resource",
        "//source/spargel/text",
    ]
    if (is_macos) {
        sources += [
            "ui_renderer_metal.mm",
        ]
        deps += [
            ":metal_shaders",
        ]
    }
}

if (is_macos) {
    metal_library("metal_shaders") {
        sources = [
            "ui_shaders.metal",
        ]
        namespace = "spargel::render"
        var_name = "METAL_SHADERS"
    }
}

executable("demo_ui_renderer") {
    sources = [
        "demo_ui_renderer.cpp",
    ]
    deps = [
        ":render",

        "//source/spargel/base",
        "//source/spargel/gpu",
        "//source/spargel/resource",
        "//source/spargel/text",
        "//source/spargel/ui",
    ]
}
